# glassport

./: .gitignore  .pre-commit-hooks.yaml  CHANGELOG.md  CONTRIBUTING.md  HANDOFF-http-sse-framing-gap.md  KIMI_ROUND3_PROMPT.md  KIMI_WORKSPACE.md  README.md  RELEASING.md  SECURITY.md  STATUS.md  detectors.py  glassport_tap.py  interaction_trace.py  kimi_session_01.md  pyproject.toml  report.py  watch.py
.github/workflows/: ci-coverage.yml  ci.yml  release.yml
adapters/: mcp_session.py
docs/: 2026-07-01-redteam-closeout-and-next-steps.md  fixes-and-agent-integration.md
docs/assignments/: named-validators.md
docs/drafts/: show-hn.md
docs/redteam/: 2026-07-09-kimi-hardening-http-relay.md  2026-07-09-kimi-prompt-relay.md
docs/superpowers/plans/: 2026-06-10-tui.md  2026-06-23-gitlab-ci-precommit.md  2026-06-23-runtime-annotation-sarif.md  2026-06-24-runtime-sarif-detect-cli-and-ci.md  2026-06-29-advise-agent-md.md  2026-06-30-advise-redteam-grill.md  2026-07-05-h2-03-network-enriched-audit.md  2026-07-06-h2-01-streamable-http.md  2026-07-11-0.6.9-security-truthfulness.md
docs/superpowers/specs/: 2026-06-10-tui-design.md  2026-06-23-gitlab-ci-precommit-design.md  2026-06-23-runtime-annotation-sarif-design.md  2026-06-29-advise-agent-md-design.md  2026-06-30-advise-redteam-grill-design.md  2026-07-03-p0-sprint-design.md  2026-07-04-h1-08-coverage-e2e-design.md  2026-07-05-h2-03-network-enriched-audit-design.md  2026-07-11-0.6.9-security-truthfulness-design.md
dogfood/: .gitignore  SPEC-advise-redteam.md  SPEC-hostile-mock.md  SPEC-http-relay-redteam.md  SPEC-renderer-redteam.md  driver.py  eval_advise_redteam.py  eval_exa.py  eval_fetch.py  eval_filesystem.py  eval_github.py  eval_hostile.py  eval_http_relay_redteam.py  eval_http_tap_redteam.py  eval_pii_registry.py  eval_provenance_redteam.py  eval_redaction_redteam.py  eval_report_redteam.py  eval_sarif_redteam.py  eval_server_redteam.py  eval_streaming_redteam.py  mock_hostile_server.py  oracle.py  redteam_fixtures.py
dogfood/findings/: advise-redteam.md  exa.md  fetch.md  filesystem.md  github.md  hostile-mock.md  http-relay-redteam.md  http-tap-redteam.md  pii-registry.md  provenance-redteam.md  redaction-redteam.md  report-redteam.md  sarif-redteam.md  server-redteam.md  streaming-redteam.md
dogfood/logs/: exa_eval_out.json  fetch_eval_out.json  filesystem_eval_out.json  github_eval_out.json  hostile_eval_out.json  pii_registry_eval_out.json
dogfood/logs/advise-redteam/: session.jsonl
dogfood/logs/exa/: 20260624T003047Z_npx_410227.jsonl  20260624T003116Z_npx_410437.jsonl  20260628T171652Z_npx_1930024.jsonl
dogfood/logs/fetch/: 20260624T003031Z_uvx_410098.jsonl  (+3 more)
dogfood/logs/fetch-single/: 20260624T003113Z_uvx_410380.jsonl
dogfood/logs/fetch-unknown/: 20260624T003144Z_uvx_410580.jsonl
dogfood/repro-http-sse-gap/: clean_notes_server.py  noisy_fetch_server.py
examples/: fake_server.py  gitlab-ci.yml  pii-azure.json  pii-crypto.json  pii-financial.json
scripts/: audit_top_servers.py  bench.py  gen_changelog.py
src/glassport/: __init__.py  advise.py  audit.py  console.py  console_html.py  detectors.py  health.py  provenance.py  prune.py  report.py  sarif.py  server.py  tap.py  tui.py  watch.py
tests/: __init__.py  test_advise.py  test_audit.py  test_checksums.py  test_ci_templates.py  test_cli.py  test_comprehensive_security.py  test_console.py  test_crypto_tokens.py  test_detectors.py  test_e2e_filesystem.py  test_gate.py  test_hardening.py  test_health.py  test_http_relay_hardening.py  test_http_tap.py  test_http_tap_hardening.py  test_log_permissions.py  test_plugins.py  test_provenance.py  test_prune.py  test_public_api.py  test_redteam_harness.py  test_report.py  test_sarif.py  test_server.py  test_session_sarif.py  test_streaming.py  test_suppress.py  test_tail_surfacing.py  test_tui.py  test_version_sync.py  test_watch.py
(+32 files in other folders)
