[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "glassport"
version = "0.6.3"
description = "Wire-level observability and enforcement for MCP servers: passive stdio tap, behavioral detectors, drift watch, and static audit. Zero dependencies."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10"
authors = [
    { name = "Dennis J. Carroll", email = "denniscarroll93@gmail.com" },
]
keywords = [
    "mcp",
    "model-context-protocol",
    "security",
    "observability",
    "proxy",
    "json-rpc",
    "audit",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: System :: Monitoring",
]

[project.optional-dependencies]
# Runtime stays zero-dependency; this extra exists only because Windows
# does not ship stdlib curses. `pip install glassport[tui]` gives Windows
# users the TUI; everyone else needs nothing (the marker makes the extra
# a no-op off Windows).
tui = ["windows-curses; platform_system == 'Windows'"]
# Development-only tooling. Never pulled by `pip install glassport` — the
# runtime stays zero-dependency. `coverage` powers the opt-in ci-coverage.yml
# gate; `hypothesis` is provisioned here for the H2.06 property-based validator
# tests (the dev-dep group is introduced in H1.08; those tests come later).
dev = ["coverage", "hypothesis"]

[project.urls]
Homepage = "https://github.com/Dennis-J-Carroll/glassport"
Repository = "https://github.com/Dennis-J-Carroll/glassport"
Issues = "https://github.com/Dennis-J-Carroll/glassport/issues"

[project.scripts]
glassport = "glassport.tap:cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pyright]
# src-layout: tell the analyzer where the package lives so it resolves
# `glassport.*` without depending on an editable install's .pth file.
extraPaths = ["src"]

[tool.setuptools.package-data]
glassport = ["py.typed"]
